feat(docs): add docs to codes
